Make conversion generic! Make Charmap and colorspace conversion generic Split code into separate files Refactoring

--- a/aart/aart.vcxproj
+++ b/aart/aart.vcxproj
@@ -147,6 +147,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Charmap.h" />
+    <ClInclude Include="Colors.h" />
+    <ClInclude Include="Comparators.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
