--- a/aart/aart.vcxproj.filters
+++ b/aart/aart.vcxproj.filters
@@ -29,5 +29,16 @@
     <ClInclude Include="Comparators.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Art.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cuda_kernels.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="cuda_kernels.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
   </ItemGroup>
 </Project>
