--- a/aart/aart.vcxproj
+++ b/aart/aart.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="colors.h" />
     <ClInclude Include="color_quantization.h" />
     <ClInclude Include="comparators.h" />
+    <ClInclude Include="convert.h" />
     <ClInclude Include="cuda_kernels.h" />
     <ClInclude Include="launch_type.h" />
   </ItemGroup>
