--- a/aart/aart.vcxproj.filters
+++ b/aart/aart.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="convert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="scale.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="cuda_kernels.cu">
